crates/math-core/tests/snapshots/error_test__math_variant_switch_in_arg.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sqrt\\bf"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:6 ]
   │
 1 │ \sqrt\bf
   │      ─┬─  
   │       ╰─── used as argument
───╯
