crates/math-core/tests/snapshots/error_test__mathord_letter.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x \\mathord a y"
---
Error: Expected a relation after \not.
   ╭─[ <input>:1:12 ]
   │
 1 │ x \mathord a y
   │            ┬  
   │            ╰── expected a relation
───╯
