crates/math-core/tests/snapshots/error_test__mathrm_unknown_cmd.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\mathrm{ab\\asdf}"
---
Position: 10..15
UnknownCommand(
    "asdf",
)
